# spotify-analytics

./: .cache  .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  spotify.ipynb  spotipy_test.py  tempCodeRunnerFile.py  testes1.ipynb
app/: main.py
app/api/: auth.py  dashboard.py  main_router.py  user.py
app/core/: aws_config.py  database.py  dependencies.py  security.py  spotipy_auth.py
app/models/: artista.py  faixa.py  relacionamentos.py  usuario.py
app/schemas/: schema_artista.py  schema_faixa.py  schema_relacionamentos_entrada.py  schema_usuario.py  schemas_relacionamentos_saida.py
app/services/: crud_service.py  data_ingestion.py  data_ingestion_service.py  emocoes.json  emotion_extraction_service.py  extracao_de_letras.py  spotipy_service.py  teste.json
app/services/crud/: artista_crud.py  faixa_crud.py  relacionamentos_crud.py  user_crud.py
app/static/: dashboard.html  index.html  script.js
app/utils/: general.py
