[project]
name = "spotify-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Kiev de Sousa Barreto",email = "yurikievbarreto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "boto3 (>=1.40.55,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
